[metadata]
name = everest-testing
version = attr: everest.testing.__version__
author = Piet Gömpel
author_email = piet.goempel@pionix.de
description = Utilities for testing EVerest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EVerest/everest-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires =
    pytest
    pytest-asyncio
    python-dateutil
    paho-mqtt ==1.6.1
    pyftpdlib
    ocpp
    websockets
    pyOpenSSL

package_dir = 
    = src

python_requires = >=3.8
